// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not parse other values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received an object",
    "path": [],
    "received": "object",
  },
]
`;

exports[`should not parse other values 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received undefined",
    "path": [],
    "received": "undefined",
  },
]
`;

exports[`should not parse other values 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received a map",
    "path": [],
    "received": "map",
  },
]
`;

exports[`should not parse other values 4`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received a set",
    "path": [],
    "received": "set",
  },
]
`;

exports[`should not parse other values 5`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received a promise",
    "path": [],
    "received": "promise",
  },
]
`;

exports[`should not parse other values 6`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received an error",
    "path": [],
    "received": "error",
  },
]
`;

exports[`should not parse other values 7`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received a date",
    "path": [],
    "received": "date",
  },
]
`;

exports[`should not parse other values 8`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received a regexp",
    "path": [],
    "received": "regexp",
  },
]
`;

exports[`should not parse other values 9`] = `
[
  {
    "code": "invalid_type",
    "expected": "null",
    "message": "Expected null, received an object",
    "path": [],
    "received": "object",
  },
]
`;
